drawing remotely on canvas

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 	<div class="canvas-wrapper">
 		<canvas id="workspace"></canvas>
 	</div>
+	<script type="text/javascript" src="/js/freedrawing,interaction.min.js"></script>
 	<script type="text/javascript" src="/js/remotecanvas.js"></script>
 </body>
 </html>
